<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/foodNameTextView"
        android:background="@color/main_color"
        >
        <TextView
            android:id="@+id/reportTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/swagger"
            android:text="@string/more_info"
            android:textColor="@color/text_colors"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/main_color"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/foodNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        android:textSize="30sp"
        android:textColor="@color/text_colors"
        android:fontFamily="@font/swagger"
        android:text="@string/food_name"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <TextView
        android:id="@+id/companyNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/foodNameTextView"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/swagger"
        android:text="@string/company_name"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toTopOf="@id/calculateLayout"
        app:layout_constraintTop_toBottomOf="@id/companyNameTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            android:id="@+id/calorieTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/swagger"
            android:text="@string/calories"
            android:textSize="@dimen/food_detail_text_size" />

        <TextView
            android:id="@+id/carbohydrateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/swagger"
            android:text="@string/carbohydrate"
            android:textSize="@dimen/food_detail_text_size" />

        <TextView
            android:id="@+id/proteinTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/swagger"
            android:text="@string/protein"
            android:textSize="@dimen/food_detail_text_size" />

        <TextView
            android:id="@+id/fatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/swagger"
            android:text="@string/fat"
            android:textSize="@dimen/food_detail_text_size" />

        <TextView
            android:id="@+id/sugarTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/swagger"
            android:text="@string/sugar"
            android:textSize="@dimen/food_detail_text_size" />

        <TextView
            android:id="@+id/saltTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/swagger"
            android:text="@string/salt"
            android:textSize="@dimen/food_detail_text_size" />

        <TextView
            android:id="@+id/cholesterolTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/swagger"
            android:text="@string/cholesterol"
            android:textSize="@dimen/food_detail_text_size" />

        <TextView
            android:id="@+id/saturatedFat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/swagger"
            android:text="@string/saturated_fat"
            android:textSize="@dimen/food_detail_text_size" />

        <TextView
            android:id="@+id/transFatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/swagger"
            android:text="@string/trans_fat"
            android:textSize="@dimen/food_detail_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calculateLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/addButton"
        app:layout_constraintTop_toBottomOf="@id/detailLayout"
        android:orientation="horizontal"
        android:weightSum="10"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        >
        <TextView
            android:id="@+id/calculateTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintRight_toLeftOf="@id/calculateEditText"
            android:textSize="@dimen/food_detail_text_size"
            android:textColor="@color/text_colors"
            android:gravity="center_vertical"
            android:text="@string/serving_size"
            android:layout_weight="3"
            android:fontFamily="@font/swagger"
            android:layout_marginEnd="10dp"
            />

        <EditText
            android:id="@+id/calculateEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="6"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/unitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gram"
            android:fontFamily="@font/swagger"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add"
        android:fontFamily="@font/swagger"
        />

</androidx.constraintlayout.widget.ConstraintLayout>