<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/maintenanceCalorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/swagger"
        android:textColor="@color/text_colors"
        android:gravity="center"
        android:text="@string/maintenance_calorie"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        />
    <LinearLayout
        android:id="@+id/goalCalorieLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/maintenanceCalorie"
        >
        <TextView
            android:id="@+id/goalCalorieTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/swagger"
            android:textColor="@color/text_colors"
            android:gravity="center"
            android:text="@string/goal_calorie"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:id="@+id/editGoalCalorieImage"
            android:src="@drawable/ic_baseline_create_24"
            android:layout_gravity="center_vertical"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/helpTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_setting_help"
        app:layout_constraintTop_toBottomOf="@id/goalCalorieLayout"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:fontFamily="@font/swagger"
        android:textSize="15sp"
        android:textColor="@color/main_color"
        />

    <LinearLayout
        android:id="@+id/agePickerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/settingTimerButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/weightPickerLayout"
        app:layout_constraintTop_toBottomOf="@id/goalCalorieLayout"
        app:layout_constraintVertical_bias="0.41">

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/swagger"
            android:text="@string/age"
            android:textColor="@color/text_colors"
            android:textSize="20sp" />

        <NumberPicker
            android:id="@+id/agePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weightPickerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/settingTimerButton"
        app:layout_constraintLeft_toRightOf="@id/agePickerLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goalCalorieLayout"
        app:layout_constraintVertical_bias="0.41">

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/swagger"
            android:text="@string/weight"
            android:textColor="@color/text_colors"
            android:textSize="20sp" />

        <NumberPicker
            android:id="@+id/weightPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/genderToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weightPickerLayout"
        app:layout_constraintBottom_toTopOf="@id/settingTimerButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/male"
        android:fontFamily="@font/swagger"
        android:textColor="#fff"
        android:backgroundTint="@color/toggle_male"
        />

    <Button
        android:id="@+id/settingTimerButton"
        android:layout_width="150dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@id/genderToggleButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settingLayout"
        android:text="@string/setting_timer_clock"
        android:background="@drawable/round_button"
        android:fontFamily="@font/swagger"
        />

    <LinearLayout
        android:id="@+id/settingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:weightSum="3"
        >
       <com.google.android.material.switchmaterial.SwitchMaterial
           android:id="@+id/settingTimerSwitch"
           android:text="@string/setting_timer"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:fontFamily="@font/swagger"
           android:paddingStart="10dp"
           android:paddingEnd="10dp"
           android:layout_weight="1.5"
           />
        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/user_setting"
            android:fontFamily="@font/swagger"
            android:layout_weight="1.5"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>