<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_toolbar_height"
                android:text="@string/add_food_header_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/foodNameLayout"
                android:gravity="center"
                android:textSize="25sp"
                android:fontFamily="@font/swagger"
                android:textColor="#000"
                android:background="@color/main_color"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foodNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/headerTitle"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/foodNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_food_name"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                    android:background="#fff"
                    android:textSize="@dimen/add_food_input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/foodNameLayout"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_company_name"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:background="#fff"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/servingSizeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/companyNameLayout"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/servingSizeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/serving_size"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:background="#fff"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calorieLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/servingSizeLayout"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/calorieTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/calories"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                    android:background="#fff"
                    android:textSize="10sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/carbohydrateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/calorieLayout"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/carbohydrateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carbohydrate"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                    android:background="#fff"
                    android:textSize="@dimen/add_food_input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/proteinLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/carbohydrateLayout"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/proteinTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/protein"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                    android:background="#fff"
                    android:textSize="@dimen/add_food_input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fatLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/proteinLayout"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fatTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fat"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                    android:background="#fff"
                    android:textSize="@dimen/add_food_input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sugarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fatLayout"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sugarTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sugar"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                    android:background="#fff"
                    android:textSize="@dimen/add_food_input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/saltLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sugarLayout"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/saltTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/salt"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                     android:background="#fff"
                    android:textSize="@dimen/add_food_input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cholesterolLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/saltLayout"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cholesterolTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cholesterol"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                    android:background="#fff"
                    android:textSize="@dimen/add_food_input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/transFatLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cholesterolLayout"
                android:orientation="horizontal"
                android:padding="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transFatTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trans_fat"
                    android:fontFamily="@font/swagger"
                    android:textColor="#000"
                    android:background="#fff"
                    android:textSize="@dimen/add_food_input_text_size"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirm"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>